# arcade

./: Cargo.toml  LICENSE  README.md  roadmap.md
src/: construct.rs  curve.rs  demo.rs  edge.rs  error.rs  example.rs  geometry.rs  global.rs  interpolate.rs  lib.rs  limits.rs  main.rs  nurbs.rs  op.rs  pga.rs  pga_bk.rs  pga_gen.py  pga_old.rs  primitives.rs  sandbox.rs  surface.rs  tests.rs  topo.rs  types.rs  vec.rs  vertex.rs
src/old/: demo.rs  lib.rs  limits.rs  pga_gen.py  types.rs
src/topo/: mod.rs  op.rs
