[package]
name = "arcade"
version = "0.1.0"
authors = ["Eric Van Albert <eric@van.al>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arcade"
path = "src/lib.rs"

[[example]]
name = "example"
path = "src/example.rs"

#[dev-dependencies]
#kiss3d = "0.23"
#nalgebra = "0.20"
